# ITL.ControlPlane.PolicyBuilder

./: .gitignore  AZURE_DEPLOYMENT_SUMMARY.md  QUICK_REFERENCE.md  README.md  crypto_asset_inventory_pqc.json  index.html  pqc_asset_scanner.py  pyproject.toml
docs/: AZURE_QUICK_REFERENCE.md  CLI.md  CLI_WORKFLOW.md  DOC_GAP_ANALYSIS.md  MANAGED_IDENTITY_EXPANSION.md  MANAGED_IDENTITY_OVERLAP_ANALYSIS.md  MULTI_FORMAT_GENERATION.md
docs/archive/: CLI_IMPLEMENTATION_SUMMARY.md  KYVERNO_INTEGRATION_SUMMARY.md  LINKEDIN_ARTIKEL_PQC.md  MONETISATIE_STRATEGIE.md  PQC_ACTION_PLAN.md  PQC_RISK_ASSESSMENT.md  PQC_TRANSITIE_STAPPENPLAN.md
examples/: README.md  __init__.py  azure_deployment.md  azure_examples.py  cli_examples.md  convert_formats.py  debug_policy.py  kyverno_examples.py  managed_identity_only_policy.py  test_new_policies.py
output/managed_identity_policies/yaml/: allow-workload-identity.yaml  audit-legacy-sp-credentials.yaml  deny-sp-certificate-credentials.yaml  deny-sp-password-credentials.yaml  managed_identity_initiative.yaml  require-managed-identity-resources.yaml  subscription_assignment.yaml
scripts/: generate_new_policies.py
src/itl_policy_builder/: __init__.py  assignment.py  builder.py  conditions.py  enums.py  evaluator.py  initiative.py  kyverno.py  models.py
src/itl_policy_builder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/itl_policy_builder/builders/: __init__.py  assignment.py  exemption.py  initiative.py  policy.py  remediation.py
src/itl_policy_builder/cli/: __init__.py  main.py
src/itl_policy_builder/conditions/: __init__.py  dsl.py
src/itl_policy_builder/deploy/: __init__.py  deployer.py
src/itl_policy_builder/enums/: __init__.py
src/itl_policy_builder/evaluation/: __init__.py  evaluator.py
src/itl_policy_builder/export/: __init__.py  arm.py  bicep.py  kyverno.py
src/itl_policy_builder/models/: __init__.py  assignment.py  exemption.py  initiative.py  policy.py  remediation.py
src/itl_policy_builder/templates/: __init__.py  bio.py  cis_azure.py  general.py  kyverno.py  managed_identity.py  pqc.py
src/itl_policy_builder/testing/: __init__.py  helpers.py
tests/: __init__.py  test_cli.py  test_kyverno.py  test_managed_identity_schema.py  test_policy_builder.py
