[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "itl-policy-builder"
version = "1.0.0"
description = "ITL Policy Builder - Fluent DSL for governance policies on ITL ControlPlane, Azure (ARM), and Kubernetes (Kyverno)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "IT Livetech", email = "platform@itlivetech.nl"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
keywords = ["itl", "controlplane", "policy", "governance", "compliance", "azure", "kubernetes", "kyverno", "talos"]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "jsonschema>=4.17",
    "httpx>=0.24.0",
]
yaml = [
    "PyYAML>=6.0",
]
kyverno = [
    "PyYAML>=6.0",
]
cli = [
    "PyYAML>=6.0",
    "click>=8.1.0",
    "httpx>=0.24.0",
]
kubernetes = [
    "PyYAML>=6.0",
    "kubernetes>=29.0.0",
]
azure = [
    "PyYAML>=6.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-identity>=1.15.0",
]
all = [
    "PyYAML>=6.0",
    "click>=8.1.0",
    "httpx>=0.24.0",
    "kubernetes>=29.0.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-identity>=1.15.0",
]

[project.scripts]
itl-policy = "itl_policy_builder.cli:cli"

[project.urls]
Documentation = "https://docs.itlivetech.nl/policy-builder"
Repository = "https://github.com/itlivetech/ITL.ControlPanel.PolicyBuilder"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
